[package]
name = "n8v-blockchain"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sha2 = "0.9.8"
serde = "1.0"
serde_json = "1.0"
libp2p = { version = "0.54.1", default-features = false } # Ensure no conflicts here
tokio = { version = "1.40.0", features = ["full"] }
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"

sp-core = { version = "8.0.0", default-features = false, features = ["std"] }
sp-runtime = { version = "8.0.0", default-features = false, features = ["std"] }
sp-runtime-interface = "8.0.0"
sp-runtime-interface-proc-macro = "7.0.0"

schnorrkel = { version = "0.11.4", features = ["std"] }

pqcrypto-dilithium = { version = "0.5.0", features = ["std"] }
cpython = { version = "0.5.2", features = ["extension-module"], default-features = false }

frame-support = { version = "4.0.0", default-features = false, features = ["std"] }
frame-system = { version = "4.0.0", default-features = false, features = ["std"] }

[patch.crates-io]
schnorrkel = { version = "0.11.4", features = ["std"] }

[features]
default = ["std"]
std = [
    "chrono/std",
    "sha2/std",
    "serde/std",
    "serde_json/std",
    "hex/std",
    "once_cell/std",
    "log/std",
    "schnorrkel/std",
    "pqcrypto-dilithium/std",
    "frame-support/std",
    "frame-system/std"
]

[[bin]]
name = "n8v-blockchain-node"
path = "node/src/main.rs"

[lib]
name = "n8v_blockchain"
path = "pallets/template/src/lib.rs"

[dev-dependencies]
sp-core = { version = "6.0.0" }
