[package]
name = "n8v-blockchain"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sha2 = "0.9.8"
serde = "1.0"
serde_json = "1.0"
libp2p = { version = "0.45", features = ["tcp-tokio", "dns-tokio"] }
tokio = { version = "1.40", features = ["full"] }
hex = { version = "0.4" }
once_cell = { version = "1.5" }
log = { version = "0.4" }
pretty_env_logger = "0.4"
pqcrypto-dilithium = { version = "0.5.0" }
frame-support = { version = "4.0", features = ["std"] }
frame-system = { version = "4.0", features = ["std"] }
heavyhash = "0.2.0"

[features]
default = ["std"]
std = [
    "chrono/std",
    "sha2/std",
    "serde/std",
    "serde_json/std",
    "hex/std",
    "log/std",
    "pqcrypto-dilithium/std",
    "frame-support/std",
    "frame-system/std",
    "heavyhash/std"
]

[[bin]]
name = "n8v-blockchain-node"
path = "node/src/main.rs"

[dev-dependencies]
sp-core = { version = "8.0.0" }
